@@ -230,5 +230,19 @@ EOS
       crazy.should == { 'a' => '1', 'z' => '1' }
     end
 
+    it "can turn off eager nullify" do
+      upsert = Upsert.new $conn, :pets
+
+      upsert.row({name: 'Bill'}, {crazy: {z: 1, x: nil}}, eager_nullify: false)
+      row = Pet.connection.select_one(%{SELECT crazy FROM pets WHERE name = 'Bill'})
+      crazy = PgHstore.parse row['crazy']
+      crazy.should == { 'z' => '1', 'x' => nil }
+
+      upsert.row({name: 'Bill'}, crazy: {a: 1})
+      row = Pet.connection.select_one(%{SELECT crazy FROM pets WHERE name = 'Bill'})
+      crazy = PgHstore.parse row['crazy']
+      crazy.should == { 'a' => '1', 'z' => '1', 'x' => nil}
+    end
+
   end
 end if ENV['DB'] == 'postgresql'
